Where is the full log? If it is that easy to get it, attach the full log right from the start please, without us asking 10 times.
And still, valuable information is missing, like the exact VLC 3 commit hash you are testing with. This would be also included in the full log if you would attach one.
you can that search engine after all found that link
version=5
Replying to [comment:8 dfuhrmann]:
And still, valuable information is missing, like the exact VLC 3 commit hash you are testing with. This would be also included in the full log if you would attach one.
build is from Aug 4 while last available is from Aug 6
Added a log where HLS stream playing in "3.0.0-git Vetinari (revision 2.2.0-git-8957-g64a447df)" ends abruptly with "[00007f8fb29801f8] adaptive demux error: Failed to create demuxer"
Sorry, I have not found a publicly available sample I could reproduce this with
Hi, I can reproduce this bug with a publicly available stream.
vlc --version VLC media player 3.0.8 Vetinari (revision 3.0.8-0-gf350b6b5a7)
vlc -vv https://stream.radiofrance.fr/franceinter/franceinter_hifi.m3u8 -> don't work
vlc -vv --adaptive-use-access https://stream.radiofrance.fr/franceinter/franceinter_hifi.m3u8 -> works
What is strange to me is that vlc -vv https://stream.radiofrance.fr/franceinter/franceinter_midfi.m3u8 works fine, it's the same http server it's just another bitrate.
Note that calling the master playlist vlc -vv --adaptive-use-access https://stream.radiofrance.fr/franceinter/franceinter.m3u8 also doesn't work, but it failed on others error so maybe another bug ?
[00007efbc00481f0] faad decoder warning: Unexpected channel configuration change[00007efbc00481f0] faad decoder warning: Bitstream value not allowed by specification[00007efbc00481f0] faad decoder warning: Array index out of range
Everything works fine with other players I've tested, like ffplay or apple device.