demux: adaptive: fix internal HTTP/1.0 handling (fix #17272)